<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/llDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/llDescriptionWidgetsMarginBottom"
            android:text="@string/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/tvInstructions" />

        <TextView
            android:id="@+id/tvInstructions"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/tvInstructions" />

        <TextView
            android:id="@+id/tvStatisticsTitle"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/llDescriptionWidgetsMarginBottom"
            android:text="@string/tvStatisticsTitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvStatistics"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/llDescriptionWidgetsMarginBottom"
            android:textSize="12sp"
            tools:text="Win: 10, Draw: 1, Lose: 5" />

        <TextView
            android:id="@+id/tvResult"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            tools:text="Win" />

        <LinearLayout
            android:id="@+id/llResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llHandPlayerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hand_player"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/peterriver"
                    android:scaleType="fitCenter"
                    android:src="@drawable/rock" />

                <TextView
                    android:id="@+id/tvPlayerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvPlayerOne" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVersus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:layout_gravity="top"
                android:text="@string/tvVersus" />

            <LinearLayout
                android:id="@+id/llHandPlayerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_hand_computer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/peterriver"
                    android:scaleType="fitCenter"
                    android:src="@drawable/paper" />

                <TextView
                    android:id="@+id/tvPlayerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tvPlayerTwo" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibGameRock"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="22dp"
                android:background="@color/clouds"
                android:scaleType="fitCenter"
                android:src="@drawable/rock" />

            <ImageButton
                android:id="@+id/ibGamePaper"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="22dp"
                android:background="@color/clouds"
                android:scaleType="fitCenter"
                android:src="@drawable/paper" />

            <ImageButton
                android:id="@+id/ibGameScissors"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/clouds"
                android:scaleType="fitCenter"
                android:src="@drawable/scissors" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>