<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llGameResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvResult"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Win" />

    <TextView
        android:id="@+id/tvTimestamp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="Fri Aug 2021 - 19:30:32" />

    <LinearLayout
        android:id="@+id/llRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/llHandPlayerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_hand_player"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/peterriver"
                android:scaleType="fitCenter"
                android:src="@drawable/rock" />

            <TextView
                android:id="@+id/tvPlayerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvPlayerOne" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="22dp"
            android:text="@string/tvVersus" />

        <LinearLayout
            android:id="@+id/llHandPlayerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_hand_computer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/peterriver"
                android:scaleType="fitCenter"
                android:src="@drawable/paper" />

            <TextView
                android:id="@+id/tvPlayerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvPlayerTwo" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>